--- a/app/iCubCluster/CMakeLists.txt
+++ b/app/iCubCluster/CMakeLists.txt
@@ -3,6 +3,9 @@ set(appname iCubCluster)
 set(conf ${CMAKE_CURRENT_SOURCE_DIR}/conf/cluster-config.xml)
 yarp_install(FILES ${conf} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
 
+set(icon ${CMAKE_CURRENT_SOURCE_DIR}/icon/icub-cluster-icon.png)
+yarp_install(FILES ${icon} DESTINATION ${ICUB_CONTEXTS_INSTALL_DIR}/${appname})
+
 ################ Copy/install cluster management scripts)
 
 add_custom_command(OUTPUT ${CMAKE_BINARY_DIR}/cluster-scripts-cmd
@@ -17,4 +20,4 @@ install(PROGRAMS scripts/icub-cluster.py
                  scripts/icub-cluster-server.sh
                  scripts/icub-cluster-run.sh
         COMPONENT Core DESTINATION bin)
-        
+
