--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -54,6 +54,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjAnalog)
   add_subdirectory(embObjStrain)
   add_subdirectory(embObjMais)
+  add_subdirectory(embObjMultiEnc)
   add_subdirectory(embObjInertials)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(usbCamera)
