--- a/app/skinGui/conf/skinGui/torso.ini
+++ b/app/skinGui/conf/skinGui/torso.ini
@@ -101,5 +101,5 @@ triangle_10pad	5	-50	43	120	4	0
 triangle_10pad	11	-18	43	240	4	0
 						
 						
-triangle_10pad	52	31	24	179.9997194	4	
+triangle_10pad	52	31	24	60	4	0	
 
