--- a/src/tools/canLoader/canLoaderLib/CMakeLists.txt
+++ b/src/tools/canLoader/canLoaderLib/CMakeLists.txt
@@ -7,16 +7,25 @@ SET(PROJECTNAME canLoaderLib)
 file(GLOB folder_header *.h)
 file(GLOB folder_source *.cpp)
 
-source_group("Source Files" FILES ${folder_source})
-source_group("Header Files" FILES ${folder_header})
 
 include_directories(${YARP_INCLUDE_DIRS})
 include_directories(${ACE_INCLUDE_DIRS})
 include_directories(${icub_firmware_shared_canProtocolLib_INCLUDE_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 
+include_directories(${icub_firmware_shared_canProtocolLib_INCLUDE_DIR}/canProtocolLib)
+include_directories(${icub_firmware_shared_embobj_INCLUDE_DIR}/embobj/plus/comm-v2/icub/)
+include_directories(${icub_firmware_shared_embobj_INCLUDE_DIR}/embobj/core/core)
+
+set(folder_source   ${folder_source}
+                    ${icub_firmware_shared_embobj_INCLUDE_DIR}/embobj/plus/comm-v2/icub/EoBoards.c
+                    ${icub_firmware_shared_embobj_INCLUDE_DIR}/embobj/plus/comm-v2/icub/EoUpdaterProtocol.c
+                    ${icub_firmware_shared_embobj_INCLUDE_DIR}/embobj/core/core/EoCommon.c
+    )
 
 
+source_group("Source Files" FILES ${folder_source})
+source_group("Header Files" FILES ${folder_header})
 
 add_library(${PROJECTNAME} ${folder_source} ${folder_header})
 
