--- a/app/robots/iCubHamburg01/camera/dragonfly2_config_right_bayer_320_240.ini
+++ b/app/robots/iCubHamburg01/camera/dragonfly2_config_right_bayer_320_240.ini
@@ -6,7 +6,7 @@ video_type 3
 white_balance 0.477 0.514
 gain 0.0
 shutter 0.666
-name /icub/cam/left
+name /icub/cam/right
 brightness 0
 DR2
 stamp 
@@ -16,5 +16,6 @@ gamma 0.4
 saturation 0.271
 framerate 30
 use_network_time 1
-d 1
-#guid <64bit global identifier, without the leading 0x> then remove the d option
+#d 1
+guid 00b09d01009da721 
+#<64bit global identifier, without the leading 0x> then remove the d option
