--- a/app/robots/iCubLisboa01/camera/dragonfly2_config_right_bayer_640_480.ini
+++ b/app/robots/iCubLisboa01/camera/dragonfly2_config_right_bayer_640_480.ini
@@ -1,11 +1,11 @@
 device grabber
-subdevice dragonfly2
+subdevice dragonfly2raw
 width 640
 height 480
 video_type 3
-white_balance 0.477 0.514
-gain 0.0
-shutter 0.666
+white_balance 0.550 0.600
+gain 0.350
+shutter 0.592
 name /icub/cam/right
 brightness 0
 DR2
@@ -16,5 +16,4 @@ gamma 0.4
 saturation 0.271
 framerate 30
 use_network_time 1
-#d 1
 guid 00b09d01009a72ef
